fix text overflow issue

--- a/app/assets/stylesheets/courses/partials/approach.css.scss
+++ b/app/assets/stylesheets/courses/partials/approach.css.scss
@@ -1,6 +1,7 @@
 #approach-unit {
-  @include fallback-height;
+  @include fallback-height();
   @include fancy-bg("background.png", #F8F7F3);
+  overflow: auto;
   .container {
     height: 100%;
   }
